fix(MetaInfo): fix update time spacing

--- a/src/views/ArticleDetail/MetaInfo/styles.module.css
+++ b/src/views/ArticleDetail/MetaInfo/styles.module.css
@@ -24,8 +24,11 @@
 }
 
 .time {
-  margin-right: var(--sp4);
   color: var(--color-grey-darker);
+}
+
+.spacingRight {
+  margin-right: var(--sp4);
 }
 
 .dot {
